syntax = "proto3";

package order;

option go_package = "./order";

/*
Common
 */
message Empty {}
message Page {
    int32 page = 1;
    int32 pageSize = 2;
    int64 total = 3;
}

message Product {
    int64 id = 1;
    int64 amount = 3;
    int64 price = 4;
}

// List
message ListItem {
    int64 id = 1;
    int32 status = 2;
    repeated Product products = 3;
    int64 totalAmount = 4;
    int64 totalPrice = 5;
}

message ListReq {
    int64 userId = 1;
    int32 status = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

message ListReply {
    repeated ListItem list = 1;
    Page page = 2;
}

// Detail
message UserIdReq {
    int64 id = 1;
    int64 userId = 2;
}

message DetailReply {
    int64 id = 1;
    int32 status = 2;
    repeated Product products = 3;
    string consignee = 4;
    string phone = 5;
    string address = 6;
    int64 totalAmount = 7;
    int64 totalPrice = 8;
    int64 createdAt = 9;
}


// DTM
message CreateReq {
    int64 userId = 1;
    string refNo = 2;
    repeated Product products = 3;
    string consignee = 4;
    string phone = 5;
    string address = 6;
}

// Internal
message IdReq {
    int64 id = 1;
}

service order {
    rpc List(ListReq) returns(ListReply);

    rpc Detail(UserIdReq) returns(DetailReply);

    // DTM
    rpc Create(CreateReq) returns(Empty);

    rpc CreateRollback(CreateReq) returns(Empty);

    // Internal
    rpc CheckPaymentTimeout(IdReq) returns(Empty);
}