syntax = "proto3";

package product;

option go_package = "./product";

/*
Common
 */
message Empty {}
message Page {
    int32 page = 1;
    int32 pageSize = 2;
    int64 total = 3;
}

// List
message ListItem {
    int64 id = 1;
    string title = 2;
    int32 category = 3;
    int64 stock = 4;
    int64 price = 5;
}

message ListReq {
    string search = 1;
    int32 category = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

message ListReply {
    repeated ListItem list = 1;
    Page page = 2;
}

// Detail
message IdReq {
    int64 id = 1;
}

message DetailReply {
    int64 id = 1;
    string title = 2;
    int32 category = 3;
    int64 stock = 4;
    int64 price = 5;
    string description = 6;
    int64 createdAt = 7;
}

// Edit
message EditReq {
    int64 id = 1;
    string title = 2;
    int32 category = 3;
    int64 stock = 4;
    int64 price = 5;
    string description = 6;
}

message IdReply {
    int64 id = 1;
}

// Internal
message ListByIdsReq {
    repeated int64 ids = 1;
}

message ListByIdsReply {
    repeated ListItem list = 1;
}

// DTM
message DeductReq {
    int64 id = 1;
    int64 amount = 2;
}

service product {
    rpc List(ListReq) returns(ListReply);

    rpc Detail(IdReq) returns(DetailReply);

    rpc Edit(EditReq) returns(IdReply);

    rpc Remove(IdReq) returns(Empty);

    // Internal
    rpc ListByIds(ListByIdsReq) returns(ListByIdsReply);

    // DTM
    rpc Deduct(DeductReq) returns(Empty);

    rpc DeductRollback(DeductReq) returns(Empty);
}
